# rustification

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  testcase.c
.github/workflows/: ci.yml
.trunk/: trunk.yaml
c2rust/: Cargo.toml
c2rust-asm-casts/: Cargo.toml
c2rust-asm-casts/src/: lib.rs
c2rust-ast-builder/: Cargo.toml
c2rust-ast-builder/src/: builder.rs  lib.rs
c2rust-ast-exporter/: Cargo.toml  build.rs
c2rust-ast-exporter/src/: AstExporter.cpp  AstExporter.hpp  ExportResult.hpp  FloatingLexer.h  ast_tags.hpp  clang_ast.rs  lib.rs
c2rust-ast-exporter/tests/: test_exporter.rs
c2rust-ast-printer/: Cargo.toml
c2rust-ast-printer/src/: lib.rs  pprust.rs
c2rust-ast-printer/src/pprust/: tests.rs
c2rust-bitfields/: Cargo.toml
c2rust-bitfields-derive/: Cargo.toml
c2rust-bitfields-derive/src/: lib.rs
c2rust-bitfields/src/: lib.rs
c2rust-build-paths/: Cargo.toml
c2rust-build-paths/src/: lib.rs
c2rust-transpile/: Cargo.toml
c2rust-transpile/src/: build_files.rs  c_ast.rs  cfg.rs  compile_cmds.rs  config.rs  convert_type.rs  diagnostics.rs  driver.rs  lib.rs  reorganize.rs  rust_ast.rs  transform.rs  translator.rs  with_stmts.rs
c2rust-transpile/src/build_files/: Cargo.toml.hbs  generated-rust-toolchain.toml  mod.rs
c2rust-transpile/src/c_ast/: conversion.rs  get_node.rs  iterators.rs  mod.rs  print.rs
c2rust-transpile/src/cfg/: inc_cleanup.rs  loops.rs  mod.rs  relooper.rs  structures.rs
c2rust-transpile/src/compile_cmds/: mod.rs
c2rust-transpile/src/rust_ast/: comment_store.rs  item_store.rs  mod.rs  set_span.rs  traverse.rs
c2rust-transpile/src/translator/: assembly.rs  atomics.rs  builtins.rs  casts.rs  comments.rs  context.rs  declaration_converter.rs  decls.rs  exprs.rs  linkage.rs  literals.rs  macros.rs  main_function.rs  mod.rs  named_references.rs  operators.rs  pointer_wrappers.rs  preprocess.rs  simd.rs  statics.rs  structs.rs  types.rs  utils.rs  variadic.rs
c2rust-transpile/tests/: snapshots.rs
c2rust-transpile/tests/snapshots/: anonymous_enum_in_struct.c  atomics.rs  enum_compound_literal.c  factorial.rs  gotos.rs  insertion.rs  macros.c  records.c  rotate.rs  snapshots__transpile-linux@dummy.c.snap  snapshots__transpile-linux@macros.c.snap  snapshots__transpile-linux@rnd.c.snap  snapshots__transpile-linux@rotate.c.snap  snapshots__transpile-linux@sigign.c.snap  snapshots__transpile-linux@types.c.snap  snapshots__transpile-macos@macros.c.snap  snapshots__transpile-macos@rnd.c.snap  snapshots__transpile-macos@rotate.c.snap  snapshots__transpile-macos@types.c.snap  snapshots__transpile-x86_64@dummy.c.snap  snapshots__transpile-x86_64@dummy2.c.snap  snapshots__transpile-x86_64@spin.c.snap  snapshots__transpile-x86_64@vm_x86.c.snap  snapshots__transpile@alloca.c.snap  snapshots__transpile@anonymous_enum_in_struct.c.snap  snapshots__transpile@arrays.c.snap  snapshots__transpile@atomics.c.snap  snapshots__transpile@counted_by.c.snap  snapshots__transpile@enum_compound_literal.c.snap  snapshots__transpile@exprs.c.snap  snapshots__transpile@factorial.c.snap  snapshots__transpile@gotos.c.snap  snapshots__transpile@incomplete_arrays.c.snap  snapshots__transpile@insertion.c.snap  snapshots__transpile@macrocase.c.snap  snapshots__transpile@macros.c.snap  snapshots__transpile@records.c.snap  snapshots__transpile@rotate.c.snap  snapshots__transpile@spin.c.snap  snapshots__transpile@static_assert.c.snap  (+8 more)
c2rust-transpile/tests/snapshots/arch-specific/: spin.c
c2rust-transpile/tests/snapshots/platform-specific/: dummy.rs  rnd.rs  rotate.c  rotate.rs
c2rust/src/: main.rs
docs/: README-developers.md
pp/: Cargo.toml  README.md
pp/src/: attr.rs  data.rs  expr.rs  file.rs  generics.rs  item.rs  lib.rs  lifetime.rs  lit.rs  mac.rs  pat.rs  path.rs  stmt.rs  ty.rs
pp/tests/: test.rs
rast/: Cargo.toml
rast/src/: attr.rs  buffer.rs  custom_keyword.rs  custom_punctuation.rs  data.rs  derive.rs  discouraged.rs  error.rs  export.rs  expr.rs  ext.rs  file.rs  generics.rs  group.rs  ident.rs  item.rs  lib.rs  lifetime.rs  lit.rs  lookahead.rs  mac.rs  macros.rs  meta.rs  op.rs  parse.rs  parse_macro_input.rs  parse_quote.rs  pat.rs  path.rs  punctuated.rs  restriction.rs  spanned.rs  stmt.rs  token.rs  ty.rs  verbatim.rs
scripts/: build_translator.py  common.py  integration_test_translator.py  test_translator.py
tests/: README.md
tests/arrays/: Cargo.toml
tests/arrays/src/: arrays.c  test_arrays.rs
tests/asm.aarch64/: Cargo.toml
tests/asm.aarch64/src/: test_asm.rs
tests/asm.arm/: Cargo.toml
tests/asm.arm/src/: test_asm.rs
tests/asm.x86_64/: Cargo.toml
tests/asm.x86_64/src/: test_asm.rs
tests/builtins/src/: test_builtins.rs
tests/casts/: Cargo.toml
tests/casts/src/: casts.c  test_casts.rs
tests/comments/: Cargo.toml
tests/comments/src/: test_comments.rs
tests/conditionals/: Cargo.toml
tests/conditionals/src/: test_conditionals.rs
tests/enums/: Cargo.toml
tests/enums/src/: enum_compound.c  test_enums.rs
tests/example/: Cargo.toml
tests/example/src/: test_add.rs  test_sub.rs
tests/floats/: Cargo.toml
tests/floats/src/: test_no_wrapping_neg.rs
tests/gotos/: Cargo.toml
tests/gotos/src/: test_irreducible.rs  test_stmt_expr.rs
tests/ints/: Cargo.toml
tests/ints/src/: test_arithmetic.rs  test_compound_assignment.rs  test_const.rs  test_implicit_ints.rs  test_ints.rs  test_sieve_of_eratosthenes.rs  test_volatile.rs
tests/items/: Cargo.toml
tests/items/src/: test_fn_attrs.rs  test_functions.rs  test_linking.rs  test_noop.rs  test_varargs.rs
tests/longdouble/: Cargo.toml
tests/longdouble/src/: test_long_double.rs
tests/loops/: Cargo.toml
tests/loops/src/: test_goto.rs  test_loops.rs  test_switch.rs
tests/macros/: Cargo.toml
tests/macros/src/: define.c  test_define.rs
tests/misc/: Cargo.toml
tests/misc/src/: static_assert.c  (+8 more)
tests/modules/: Cargo.toml
tests/pointers/: Cargo.toml
tests/simd.x86_64/: Cargo.toml
tests/statics/: Cargo.toml
tests/strings/: Cargo.toml
tests/structs/: Cargo.toml
tests/unions/: Cargo.toml
(+20 files in other folders)
