[workspace]
resolver = "2"
members = [
    "c2rust",
    "c2rust-asm-casts",
    "c2rust-ast-builder",
    "c2rust-ast-exporter",
    "c2rust-ast-printer",
    "c2rust-bitfields",
    "c2rust-bitfields-derive",
    "c2rust-build-paths",
    "c2rust-transpile",
]
exclude = [
    "c2rust-macros",
    "c2rust-refactor",
    "examples",
    "tests",
]

[workspace.package]
version = "0.20.0"
authors = ["bungcip <bungcip@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/bungcip/rustification"
repository = "https://github.com/bungcip/rustification"
license = "BSD-3-Clause"
keywords = ["transpiler", "migration", "translation", "c"]
categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]

[profile.dev.package."*"]
opt-level = 3
