[package]
name = "c2rust-ast-exporter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Clang AST extraction API for use in the C2Rust project"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
links = "clangAstExporter"

[lints]
workspace = true

[dependencies]
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11"

[build-dependencies]
bindgen = { version = "0.72", features = ["logging"] }
clang-sys = "1.8"
cmake = "0.1.49"
env_logger = "0.11"

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
# Force static linking of LLVM
llvm-static = []
