[package]
name = "c2rust-ast-printer"
version.workspace = true
authors = ["The C2Rust Project Developers <c2rust@immunant.com>", "The Rust Project Developers"]
edition.workspace = true
description = "Customized version of libsyntax rust pretty-printer"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "proc-macro", "printing", "clone-impls"] }
proc-macro2 = "1.0.86"
prettyplease = {version="0.2", features = ["verbatim"]}
