[package]
name = "c2rust-transpile"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "C2Rust transpiler implementation"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
c2rust-ast-builder = { version = "0.100.0", path = "../c2rust-ast-builder" }
c2rust-ast-exporter = { version = "0.100.0", path = "../c2rust-ast-exporter" }
c2rust-ast-printer = { version = "0.100.0", path = "../c2rust-ast-printer" }
c2rust-bitfields = { version = "0.100.0", path = "../c2rust-bitfields" }
colored = "3.0"
dtoa = "1.0"
thiserror = "2.0"
anyhow = "1.0"
env_logger = "0.11"
handlebars = "6.3"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.14"
log = "0.4"
log-reroute = "0.1"
pathdiff = "0.2"
proc-macro2 = "1.0.86"
regex = "1"
serde = { version = "1.0", features = ["rc"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_derive = "1.0.80"
serde_json = "1.0"
smallvec = "1.0"
strum = "0.27"
strum_macros = "0.27"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "printing"]}

[features]
# Force static linking of LLVM
llvm-static = ["c2rust-ast-exporter/llvm-static"]
