[package]
name = "pp"
version = "0.2.20"
authors = ["David Tolnay <dtolnay@gmail.com>"]
autoexamples = false
categories = ["development-tools"]
description = "A minimal `syn` syntax tree pretty-printer"
documentation = "https://docs.rs/prettyplease"
edition = "2021"
exclude = ["cargo-expand"]
keywords = ["rustfmt"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/prettyplease"
rust-version = "1.61"


[dependencies]
proc-macro2 = { version = "1.0.80", default-features = false }
rast = { path = "../rast" }

[dev-dependencies]
indoc = "2"
proc-macro2 = { version = "1.0.80", default-features = false }
quote = { version = "1.0.35", default-features = false }
rast = { path = "../rast" }

[lib]
doc-scrape-examples = false

